Fixing the overlap issueaffecting non first of type items

--- a/code/thrive-design-stylesheet-new.css
+++ b/code/thrive-design-stylesheet-new.css
@@ -5881,6 +5881,10 @@ body.ribbit #edit-event-button-container {
 
 @media (max-width: 991px) {
 
+    body.ribbit .row.overlap > div {
+        margin-top: 0px;
+    }
+
     body.ribbit .row.overlap > div:first-of-type {
         margin-top: -48px;
     }
